Scroll bar on lists container if overflowing Fixes #147

--- a/frontend/src/components/css/ListView.css
+++ b/frontend/src/components/css/ListView.css
@@ -15,6 +15,11 @@
 	justify-content: space-between;
 }
 
+#list-container {
+	overflow-y: auto;
+	height: 60%;
+}
+
 .list-view-item {
 	display: flex;
 	justify-content: space-between;
